--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 
     <div class="card-footer">
       <button class="action-button share-card-button ">Share Card</button>
-      <button class="action-button" onclick="window.location.href='/download-vcard'">Save Contact</button>
+<!--       <button class="action-button" onclick="window.location.href='/download-vcard'">Save Contact</button> -->
+      <button class="action-button save-contact-button">Save Contact</button>
       <button class="action-button send-contact-button">Send Your Contact</button>
     </div>
   </div>
