--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
       <button class="action-button share-card-button ">Share Card</button>
 <!--       <button class="action-button" onclick="window.location.href='/download-vcard'">Save Contact</button> -->
       <button class="action-button save-contact-button">Save Contact</button>
+      <p id="contact-message" style="display: none; color: green; margin-top: 10px;">
+        📱 Open the downloaded file to save the contact.
+      </p>
       <button class="action-button send-contact-button">Send Your Contact</button>
     </div>
   </div>
